# Difference-Calculator

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: main.yml
gen_diff/: engine.py  generate_diff.py  read_file.py  stylish.py
gen_diff/formatters/: json.py  plain.py  stylish.py
gen_diff/scripts/: gendiff.py
gendiff/: __init__.py  engine.py  formatter.py  gendiff.py  generate_diff.py  parsing.py  read_file.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/scripts/: gen_diff.py  gendiff.py
tests/: test_json.py
