[tool.poetry]
name = "hexlet-code"
version = "0.1.1"
description = ""
authors = ["ilnarkz"]
packages = [
  { include = "gen_diff" },
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"

[tool.poetry.scripts]
gendiff = "gen_diff.scripts.gendiff:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
