[tool.poetry]
name = "hexlet-code"
version = "0.1.1"
description = ""
authors = ["ilnarkz"]
packages = [
  { include = "gen_diff" },
]

[tool.poetry.dependencies]
python = "^3.6"


[tool.poetry.dev-dependencies]
pytest-cov = "^3.0.0"
pytest = "^7.0.0"
flake8 = "^4.0.1"
PyYAML = "^6.0"

[tool.poetry.scripts]
gendiff = "gen_diff.scripts.gendiff:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
