[tool.poetry]
name = "hexlet-code"
version = "0.1.2"
description = ""
authors = ["ilnarkz"]
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.6"
PyYAML = "^6.0"


[tool.poetry.dev-dependencies]
pytest-cov = "^3.0.0"
pytest = "^7.0.0"
flake8 = "^4.0.1"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gen_diff:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
